--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -25,6 +25,7 @@
         android:layout_marginBottom="45dp"
         android:src="@drawable/logo"></androidx.appcompat.widget.AppCompatImageView>
 
+
     <Button
         android:id="@+id/btnPlayPerson"
         android:layout_width="wrap_content"
@@ -51,203 +52,246 @@
 
     <ImageView
         android:id="@+id/star1"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginBottom="36dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star2"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="80dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star3"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="100dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="260dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star4"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="140dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star5"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="140dp"
         android:layout_marginLeft="20dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star6"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="300dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star7"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginLeft="350dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="60dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star8"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_marginLeft="240dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star9"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="240dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="110dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star10"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="210dp"
         android:layout_marginLeft="350dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star11"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="50dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="320dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star12"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="300dp"
         android:layout_marginLeft="150dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star13"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="350dp"
         android:layout_marginTop="300dp"
-        android:layout_marginLeft="330dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star14"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="380dp"
         android:layout_marginLeft="390dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star15"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="480dp"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_marginLeft="350dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="480dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star16"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="400dp"
         android:layout_marginLeft="30dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star17"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="500dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginLeft="10dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="500dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star18"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="600dp"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_marginLeft="70dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="600dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star19"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="580dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginLeft="300dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="580dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star20"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="550dp"
-        android:layout_marginLeft="180dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="630dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star21"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_marginLeft="380dp"
         android:layout_marginTop="580dp"
-        android:layout_marginLeft="400dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star22"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginTop="680dp"
         android:layout_marginLeft="300dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="680dp"
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star23"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="650dp"
         android:layout_marginLeft="200dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star24"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="680dp"
-        android:layout_marginLeft="80dp"
-        android:src="@drawable/ic_star_background" />
+        android:src="@drawable/ic_vector_star" />
 
     <ImageView
         android:id="@+id/star25"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="430dp"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_marginLeft="200dp"
-        android:src="@drawable/ic_star_background" />
+        android:layout_marginTop="580dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <!-- Working with the logo animation here
+    <ImageView
+        android:id="@+id/starLogo1"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="90dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/starLogo2"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="190dp"
+        android:layout_marginTop="90dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/starLogo3"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="210dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/starLogo4"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="220dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/lineLogo1"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginLeft="-65dp"
+        android:layout_marginTop="55dp"
+        android:src="@drawable/ic_vertical_linelogo" />
+        -->
 
     <!--
     <ImageView
