--- a/app/src/main/res/drawable/logo_anim.xml
+++ b/app/src/main/res/drawable/logo_anim.xml
@@ -2,14 +2,14 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="true"
     android:visible="true">
-    <item android:drawable="@drawable/ic_frame_01" android:duration="250" />
-    <item android:drawable="@drawable/ic_frame_02" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_03" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_04" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_05" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_06" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_07" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_08" android:duration="300" />
-    <item android:drawable="@drawable/ic_frame_09" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_01" android:duration="250" />
+    <item android:drawable="@drawable/logo_frame_02" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_03" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_04" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_05" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_06" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_07" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_08" android:duration="300" />
+    <item android:drawable="@drawable/logo_frame_09" android:duration="300" />
 
 </animation-list>
